[build-system]
requires = [
    "flit_core >=2,<4",
]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".idea", "tmp", "dist", ".tox", ".pytest_cache"]

[tool.flit.metadata]
module = "facet"
author = "Boston Consulting Group (BCG)"
home-page = "https://github.com/BCG-Gamma/facet"
description-file = "pypi_description.rst"
dist-name = "gamma-facet"
license = "Apache Software License v2.0"

requires = [
    # direct requirements of gamma-facet
    "gamma-pytools  ~=2.0",
    "matplotlib     ~=3.0",
    "numpy          >=1.17,<2a",
    "packaging      >=20",
    "pandas         >=0.24,<2a",
    "scipy          ~=1.2",
    "shap           >=0.34,<0.41a",
    "sklearndf      ~=2.0.dev3",
]

requires-python = ">=3.7,<4a"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.requires-extra]
testing = [
    "pytest ~= 7.1",
    "pytest-cov ~= 2.12",
    "flake8 ~= 3.8",
    "flake8-comprehensions ~= 3.2",
    "isort ~= 5.10",
    "lightgbm ~=3.0.0",
]
docs = [
    "sphinx ~= 4.4",
    "sphinx-autodoc-typehints ~= 1.12",
    "pydata-sphinx-theme ~= 0.7",
    "jinja2 ~= 2.11",
    "nbsphinx ~= 0.8.8",
    "jupyter == 1",
    "docutils ~= 0.17",
    "xlrd ~= 1.2",
    "m2r ~= 0.2"
]

[tool.flit.metadata.urls]
Documentation = "https://bcg-gamma.github.io/facet/"
Repository = "https://github.com/BCG-Gamma/facet"

[build]
# comma-separated list of packages to be built from source in pip min builds
no-binary.min = ["matplotlib", "shap"]

[build.matrix.min]
# direct requirements of gamma-facet
gamma-pytools  = "~=2.0.0"
matplotlib     = "~=3.0.3"
numpy          = "==1.17.5"
packaging      = "~=20.9"
pandas         = "~=0.24.2"
python         = ">=3.7.12,<3.8a"    # cannot use ~= due to conda bug
scipy          = "~=1.2.1"
shap           = "~=0.34.0"
sklearndf      = "~=2.0.dev3"
# additional minimum requirements of sklearndf
boruta         = "~=0.3.0"
lightgbm       = "~=3.0.0"
scikit-learn   = "~=0.21.3"
# additional minimum requirements of gamma-pytools
joblib         = "~=0.14.1"
typing_inspect = "~=0.4.0"
# additional minimum requirements of shap
ipython        = "==7.0"

[build.matrix.max]
# direct requirements of gamma-facet
gamma-pytools  = "~=2.0"
matplotlib     = "~=3.5"
numpy          = ">=1.22,<2a"
packaging      = ">=20.9"
pandas         = "~=1.4"
python         = ">=3.8.10,<4a"   # cannot use ~= due to conda bug
scipy          = "~=1.8"
shap           = "~=0.40.0"
sklearndf      = ">=2.0.dev3,<3a"
# additional maximum requirements of sklearndf
boruta         = "~=0.3"
lightgbm       = "~=3.3"
scikit-learn   = "~=1.0.2"
# additional maximum requirements of gamma-pytools
joblib         = "~=1.1"
typing_inspect = "~=0.7"
# additional maximum requirements of shap
ipython        = ">=7"

[tool.black]
# quiet = "True"
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | data
    | docs
    | notebooks
    | sphinx
  )/
)
'''
