[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".idea", "tmp", "dist", ".tox", ".pytest_cache"]

[tool.flit.metadata]
module = "facet"
author = "Boston Consulting Group (BCG)"
home-page = "https://github.com/BCG-Gamma/facet"
description-file = "pypi_description.rst"
dist-name = "gamma-facet"
license = "Apache Software License v2.0"

requires = [
    "gamma-pytools  >=2.1rc,<3a",
    "matplotlib     ~=3.0",
    "numpy          >=1.21,<2a",  # cannot use ~= due to conda bug
    "packaging      >=20",
    "pandas         ~=1.0",
    "scipy          ~=1.2",
    "shap           >=0.34,<0.42a",
    "sklearndf      >=2.2rc,<3a",
]

requires-python = ">=3.7,<4a"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.requires-extra]
testing = [
    "pytest ~= 7.1",
    "pytest-cov ~= 2.12",
    "flake8 ~= 3.8",
    "flake8-comprehensions ~= 3.2",
    "isort ~= 5.10",
    "lightgbm ~=3.0.0",
    "xgboost ~= 1.5",
]
docs = [
    "sphinx ~= 4.5",
    "sphinx-autodoc-typehints ~= 1.19",
    "pydata-sphinx-theme ~= 0.8.1",
    "jinja2 ~= 2.11",
    "nbsphinx ~= 0.8.9",
    "jupyter == 1",
    "docutils ~= 0.17",
    "xlrd ~= 1.2",
    "m2r ~= 0.2"
]

[tool.flit.metadata.urls]
Documentation = "https://bcg-gamma.github.io/facet/"
Repository = "https://github.com/BCG-Gamma/facet"

[build]
# comma-separated list of packages to be built from source in pip min builds
no-binary.min = ["matplotlib", "shap"]

[build.matrix.min]
# direct requirements of gamma-facet
gamma-pytools  = "~=2.1rc"
matplotlib     = "~=3.0.3"
numpy          = "==1.21.6"  # cannot use ~= due to conda bug
packaging      = "~=20.9"
pandas         = "~=1.0.5"
python         = ">=3.7.12,<3.8a"    # cannot use ~= due to conda bug
scipy          = "~=1.4.1"
shap           = "~=0.34.0"
sklearndf      = "~=2.2rc"
# additional minimum requirements of sklearndf
boruta         = "~=0.3.0"
lightgbm       = "~=3.0.0"
scikit-learn   = "~=0.24.2"
xgboost        = "~=1.5"
# additional minimum requirements of gamma-pytools
joblib         = "~=0.14.1"
typing_inspect = "~=0.4.0"
# additional minimum requirements of shap
ipython        = "==7.0"
numba          = "~=0.55"  # required to support numpy 1.21

[build.matrix.max]
# direct requirements of gamma-facet
gamma-pytools  = ">=2.1rc,<3a"
matplotlib     = "~=3.5"
numpy          = ">=1.22,<2a"  # cannot use ~= due to conda bug
packaging      = ">=20"
pandas         = "~=1.4"
python         = ">=3.9,<4a"   # cannot use ~= due to conda bug
scipy          = "~=1.8"
shap           = "~=0.41"
sklearndf      = ">=2.2rc,<3a"
# additional maximum requirements of sklearndf
boruta         = "~=0.3"
lightgbm       = "~=3.3"
scikit-learn   = "~=1.1"
xgboost        = "~=1.5"
# additional maximum requirements of gamma-pytools
joblib         = "~=1.1"
typing_inspect = "~=0.7"
# additional maximum requirements of shap
ipython        = ">=7"
numba          = ">=0.55.2"  # required to support numpy 1.22

[tool.black]
# quiet = "True"
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | data
    | docs
    | notebooks
    | sphinx
  )/
)
'''
